# libbst

./: README  README.md  bst.c  bst.h  driver.c  meson.build
demo/: demo_1_fibonacci.c  demo_2_primes.c
demos/: demo_1_fibonacci.c  demo_2_primes.c  meson.build
include/: bst.h  errors.h  meson.build
spec/: libbst.spec
spec/fedora/: libbst-devel.spec
specs/fedora/: libbst-devel.spec
src/: bst.c  errors.c  meson.build
test/: demo_1_int.c  demo_2_string.c  demo_3_fibonacci.c  demo_4_primes.c  meson.build  test_bst_int.c
tests/: test_bst_int.c  test_bst_string.c
